# zebragram

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_icpl  README.md  emp_tool_install.py  global.hpp  ram.h
crypto/: arith_label.cpp  arith_label.hpp  arith_mul.cpp  arith_mul.hpp  ec.cpp  ec.hpp  fmpz_helpers.cpp  fmpz_helpers.hpp  hash.cpp  hash.hpp  key_manager.cpp  key_manager.hpp  label.hpp  mod2.hpp  paillier.cpp  paillier.hpp  powm.cpp  powm.hpp  rand.cpp  rand.hpp  three_halves.cpp  three_halves.hpp
emp/: channel_util.cpp  channel_util.hpp  emp_interface.cpp  emp_interface.hpp  io_channel.h  io_channel_impl.hpp
emp-headers/: file_io_channel.h  highspeed_net_io_channel.h  mem_io_channel.h  net_io_channel.h
gadgets/: access_reveal_ram.hpp  circuit_oram.hpp  gadget.cpp  gadget.hpp  gadget_group.hpp  link.cpp  link.hpp  rec_oram.hpp
scripts/: README.md  basic_cost.py  circuit_oram_ref.hpp  params.py  parse_raw.py  plot.py  sim_cost.py  simd65536_adaptive.txt  simd_compute.txt  simd_raw.txt  tsc_raw.txt
scripts/chernoff_test/: main.cpp
scripts/flint_cleanup_test/: Makefile  flint_program  main.cpp
scripts/flint_test/: Makefile  paillier_bench.c
storage/: gc_ptr.hpp  storage_util.cpp  storage_util.hpp
tests/: icpl_test.cpp  test_access_reveal_ram.cpp  test_arith_mul.cpp  test_arith_word.cpp  test_circuit_oram.cpp  test_circuit_oram_ref.cpp  test_crypto.cpp  test_emp_interface.cpp  test_func.cpp  test_mod2.cpp  test_paillier.cpp  test_permute.cpp  test_rec_oram.cpp  test_simd_word.cpp  test_util.hpp  test_utils.cpp  test_vec.cpp  test_word.cpp
tools/: malloc_tracker.c
types/: arith_word.cpp  arith_word.hpp  bit.cpp  bit.hpp  data_type.cpp  data_type.hpp  func.cpp  func.hpp  simd_word.cpp  simd_word.hpp  vec.hpp  word.hpp
utils/: integer_permutation.cpp  integer_permutation.hpp  lock.hpp  util.cpp  util.hpp  waksman.cpp  waksman.hpp
